Issue# 2068: Display order button on mobile screen widgets (#2069)

--- a/src/app/client/components/mobile-dashboard-content/mobile-dashboard-content.component.less
+++ b/src/app/client/components/mobile-dashboard-content/mobile-dashboard-content.component.less
@@ -1,5 +1,6 @@
 @import "theme-mixin";
 @import "scrollable-mixin";
+@import "buy-sell-button-mixin";
 
 .themeMixin({
   :host {
@@ -14,6 +15,10 @@
       i {
         font-size: 20px;
       }
+    }
+
+    .buy-button {
+      .buySellButton(@buy-color, @buy-sell-btn-text-color, @buy-color-disabled, @buy-color-background-disabled);
     }
   }
 });
